--- a/templates/reports.html
+++ b/templates/reports.html
@@ -287,7 +287,7 @@
                 <div class="icon-wrapper theme-blue">
                     <i class="fa-solid fa-truck-fast"></i>
                 </div>
-                <h3 class="card-title">Procurement</h3>
+                <h3 class="card-title">Purchase Report</h3>
                 <p class="card-desc">Complete log of supplier purchases, dates, and bill amounts.</p>
                 <div class="card-arrow">View Report <i class="fa-solid fa-arrow-right ms-2"></i></div>
             </a>
@@ -309,4 +309,5 @@
 
 </div>
 {% endblock %}
+
 
